--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<div id="peopleList">
 				<div class="team">V.A.R</div>
 				<div class="person1">
-					형근<br>000@000.com
+					형근<br>gudrms83@gmail.com
 				</div>
 				<div class="person2">
 					준표<br>drjp87@gmail.com
@@ -22,19 +22,26 @@
 			</div>
 			<div id="workList">
 				<div class="team">
-					<img src="img/teamproject.jpg" class="work" id="btnTeam"/>
+					<img src="img/teamproject.jpg" class="work"/>
+					<div id="btnTeam" class="info"><p>팀 프로젝트<br>Web Game: Sparrow</p></div>
 				</div>
 				<div class="person1">
-					<img src="img/Hproj01.jpg" class="work" id="btnH1"/>
-					<img src="img/Hproj02.jpg" class="work" id="btnH2"/>
+					<img src="img/Hproj01.jpg" class="work"/>
+					<div id="btnH1" class="info"><p>형근 프로젝트1</p></div>
+					<img src="img/Hproj02.jpg" class="work"/>
+					<div id="btnH2" class="info"><p>형근 프로젝트2</p></div>
 				</div>
 				<div class="person2">
-					<img src="img/Jproj01.jpg" class="work" id="btnJ1"/>
-					<img src="img/Jproj02.jpg" class="work" id="btnJ2"/>
+					<img src="img/Jproj01.jpg" class="work"/>
+					<div id="btnJ1" class="info"><p>준표 프로젝트1<br>CSS Sprite Animation</p></div>
+					<img src="img/Jproj02.jpg" class="work"/>
+					<div id="btnJ2" class="info"><p>준표 프로젝트2<br>Brush Tool with Canvas</p></div>
 				</div>
 				<div class="person3">
-					<img src="img/Sproj01.jpg" class="work" id="btnS1"/>
-					<img src="img/Sproj02.jpg" class="work" id="btnS2"/>
+					<img src="img/Sproj01.jpg" class="work"/>
+					<div id="btnS1" class="info"><p>승운 프로젝트1<br>Brush Tool with Canvas</p></div>
+					<img src="img/Sproj02.jpg" class="work" />
+					<div id="btnS2" class="info"><p>승운 프로젝트2<br>Mobile Game: Wonderland</p></div>
 				</div>
 			</div>
 		</div>
