--- a/source/Sproj2/wonderland.html
+++ b/source/Sproj2/wonderland.html
@@ -36,5 +36,6 @@
 		<canvas id="GameCanvas" width="960" height="576" style="position:absolute; top:0px; left:0px">
 			HTML5 Canvas를 지원하지 않습니다.
 		</canvas>
+		<canvas id="CursorCanvas" width="960" height="576" style="position:absolute; top:0px; left:0px"></canvas>
 	</body>
 </html>
