--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 				</div>
 				<div class="person1">
 					<img src="img/Hproj01.jpg" class="work"/>
-					<div id="btnH1" class="info"><p>형근 프로젝트1</p></div>
+					<div id="btnH1" class="info"><p>형근 프로젝트1<br>CSS Mouse Test</p></div>
 					<img src="img/Hproj02.jpg" class="work"/>
-					<div id="btnH2" class="info"><p>형근 프로젝트2</p></div>
+					<div id="btnH2" class="info"><p>형근 프로젝트2<br>Brush Tool with Canvas</p></div>
 				</div>
 				<div class="person2">
 					<img src="img/Jproj01.jpg" class="work"/>
